# Static-Program-Analyzer

./: .gitignore  README.md
Team19/Code19/src/spa/: CMakeLists.txt
Team19/Code19/src/spa/src/: DesignExtractor.cpp  Parser.cpp
Team19/Code19/src/spa/src/QPS/: QueryParser.cpp  QueryParser.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
Team19/Code19/src/spa/src/commons/: Shunt.cpp  Shunt.h  ShuntingYard.cpp  ShuntingYard.h
Team19/Code19/src/spa/src/pkb/: PKB.cpp  PKB.h  PKBCacheManager.h  PKBManager.h  PKBReader.h  PKBReaderManager.h  PKBWriter.h  PKBWriterManager.h
Team19/Code19/src/spa/src/pkb/readers/: VariableReader.h
Team19/Code19/src/spa/src/pkb/src/: PKB.h
Team19/Code19/src/spa/src/pkb/stores/: FollowsStore.cpp  FollowsStore.h  FollowsTStore.cpp  FollowsTStore.h  ParentStore.cpp  ParentStore.h  ParentTStore.cpp  ParentTStore.h
Team19/Code19/src/spa/src/pkb/templates/: TemplateMapSet.h
Team19/Code19/src/spa/src/pkb/writers/: FollowsTWriter.h  FollowsWriter.h  VariableWriter.h
Team19/Code19/src/spa/src/qps/: ParsingResult.cpp  ParsingResult.h  QueryEvaluator.cpp  QueryEvaluator.h  QueryParser.cpp  QueryParser.h  QueryProcessor.cpp  QueryProcessor.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
Team19/Code19/src/spa/src/qps/Evaluator/: FollowsStrategy.cpp  FollowsStrategy.h  QueryEvaluator.cpp  QueryEvaluator.h
Team19/Code19/src/spa/src/qps/Parser/: QueryParser.cpp  QueryParser.h  Tokenizer.cpp  Tokenizer.h
Team19/Code19/src/spa/src/qps/evaluator/: FollowsStrategy.cpp  FollowsStrategy.h  PatternStrategy.cpp  PatternStrategy.h  QueryEvaluationStrategy.cpp  QueryEvaluationStrategy.h  QueryEvaluator.cpp  QueryEvaluator.cpp.rej  QueryEvaluator.h  QueryGroup.cpp  QueryGroup.h  QueryOptimiser.cpp  QueryOptimiser.h  ResultTable.cpp  ResultTable.h
Team19/Code19/src/spa/src/qps/parser/: ParsingResult.cpp  ParsingResult.h  QueryParser.cpp  QueryParser.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
Team19/Code19/src/spa/src/sp/: DesignExtractor.cpp  LexicalToken.cpp  LexicalToken.h  LexicalTokenType.cpp  LexicalTokenType.h  Parser.cpp  Parser.h  PrintDesignExtractorTest.cpp  SimpleParser.cpp  SimpleParser.h  SourceProcessor.cpp  SourceProcessor.h  Tokenizer.cpp  Tokenizer.h  Utility.cpp  Utility.h
Team19/Code19/src/spa/src/sp/AST/: AST.cpp  AST.h  ASTHelper.cpp  ASTHelper.h  ASTNode.cpp  ASTNode.h  ASTUtility.cpp  ASTUtility.h  Utility.cpp  Utility.h
Team19/Code19/src/spa/src/sp/ControlFlow/: CFGNode.cpp  CFGNode.h  SimpleControlFlow.cpp  SimpleControlFlow.h
Team19/Code19/src/spa/src/sp/DesignExtractor/: DesignExtractor.cpp  DesignExtractor.h  DesignExtractorFacade.cpp  DesignExtractorFacade.h  FacadeDesignExtractor.cpp  FacadeDesignExtractor.h
Team19/Code19/src/spa/src/sp/Parser/: AssignStmt.cpp  AssignStmt.h  CallStmt.cpp  CallStmt.h  CondExpr.cpp  CondExpr.h  Grammar.h  PrintStmt.cpp  PrintStmt.h  Procedure.cpp  Procedure.h  Program.cpp  Program.h  ReadStmt.cpp  ReadStmt.h  SimpleCallLinker.cpp  SimpleCallLinker.h  SimpleLineManager.cpp  SimpleLineManager.h  SimpleParser.cpp  SimpleParser.h  SimpleParserFacade.cpp  Stmt.cpp  (+8 more)
Team19/Code19/src/unit_testing/: CMakeLists.txt
Team19/Code19/src/unit_testing/src/: TestAST.cpp  TestQueryParser.cpp  TestTokenizer.cpp
Team19/Code19/src/unit_testing/src/commons/: ShuntingYardTest.cpp  ShuntingYardTest_AI.cpp
Team19/Code19/src/unit_testing/src/pkb/: PKBCacheManagerTest_AI.cpp  PKBReaderTest.cpp  PKBReaderTest_AI.cpp  PKBTest.cpp  PKBWriterTest.cpp  PKBWriterTest_AI.cpp
Team19/Code19/src/unit_testing/src/qps/: ParsingResultTest.cpp  QueryEvaluatorTest.cpp  QueryParserTest.cpp  ResultTableTest.cpp  TestParsingResult.cpp  TestQueryEvaluator.cpp  TestQueryParser.cpp  TestResultTable.cpp  TestTokenizer.cpp
Team19/Code19/src/unit_testing/src/sp/: ASTTest.cpp  DesignExtractorEntityTest.cpp  DesignExtractorProcedureTest.cpp  DesignExtractorStatementTest.cpp  DesignExtractorTest.cpp  FileReaderTest.cpp  LexicalTokenTest.cpp  LexicalTokenTest_AI.cpp  LexicalTokenTypeTest.cpp  ParseAssignStatement.cpp  ParseCallStatement_AI.cpp  ParsePrintStatement_AI.cpp  ParseProcedure.cpp  ParseProgram.cpp  ParseReadStatement_AI.cpp  ParseStatement.cpp  ParseStatementList.cpp  SourceParserTest.cpp  TokenizerTest.cpp  WorkflowTest.cpp
(+774 files in other folders)
